Clips: Fix some layout bugs
Turns out that if you don't add relative positioning to the parent of an
absolutely positioned input, then keyboard navigation will scroll elements
that shouldn't be scrolling.

--- a/web/css/components/_clip-selector.scss
+++ b/web/css/components/_clip-selector.scss
@@ -1,3 +1,4 @@
+@use 'tools/fill';
 @use 'tools/focus';
 
 .clip-selector__list {
@@ -12,6 +13,7 @@
 }
 
 .clip-selector__option {
+  position: relative;
   display: flex;
   margin: var(--margin-small);
 
@@ -21,7 +23,10 @@
   background: var(--bg-alt);
 
   input {
-    position: absolute;
+    // Make scrolling during keyboard navigation bring as much of the option
+    // into view as possible
+    @include fill.fill-parent;
+
     z-index: -1;
     opacity: 0;
   }
