--- a/web/css/tools/_fill.scss
+++ b/web/css/tools/_fill.scss
@@ -1,7 +1,9 @@
 @mixin fill-parent {
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
+
+  box-sizing: border-box;
 }
